[figures] fig-ordered-tracing: add cats crossings and an attempt at overlapping molecules crossings

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz\")\n",
     "data_dir = base_dir / \"output_fig_nodestats\"\n",
-    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-disordered-tracing\")\n",
+    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-ordered-tracing\")\n",
     "assert figure_dir.exists()\n",
     "assert data_dir.exists()\n",
     "\n",
@@ -91,7 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ordered_skeleton_mask = image_disordered_traces_grain1_branch_indexes.astype(bool)\n",
@@ -116,9 +115,7 @@
     "\n",
     "    # make masked array for node branch mask\n",
     "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
-    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
-    "\n",
-    "\n"
+    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)"
    ]
   },
   {
@@ -138,21 +135,158 @@
     "loadscans_dict = loadscans.img_dict\n",
     "\n",
     "cat_topleft = (0, 103)\n",
+    "cat_crop_size = (256, 256)\n",
     "\n",
     "cat_image_dict = loadscans_dict[list(loadscans_dict.keys())[0]]\n",
     "\n",
+    "cat_p2nm = cat_image_dict[\"pixel_to_nm_scaling\"]\n",
     "cat_image = cat_image_dict[\"image\"]\n",
+    "print(f\"image size nm : {cat_image.shape[0]*cat_p2nm:.2f} x {cat_image.shape[1]*cat_p2nm:.2f} nm\")\n",
+    "cat_crop = cat_image[\n",
+    "    cat_topleft[0] : cat_topleft[0] + cat_crop_size[0], cat_topleft[1] : cat_topleft[1] + cat_crop_size[1]\n",
+    "]\n",
+    "plt.imshow(cat_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.show()\n",
+    "plt.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.show()\n",
     "cat_ordered_tracing = cat_image_dict[\"ordered_traces\"][\"above\"]\n",
     "\n",
-    "cat_ordered_coords_mol0 = cat_ordered_tracing[\"grain_0\"][\"mol_0\"][\"ordered_coords\"] + cat_topleft\n",
-    "cat_ordered_coords_mol1 = cat_ordered_tracing[\"grain_0\"][\"mol_1\"][\"ordered_coords\"] + cat_topleft\n",
+    "cat_ordered_coords_mol0 = cat_ordered_tracing[\"grain_0\"][\"mol_0\"][\"ordered_coords\"]\n",
+    "cat_ordered_coords_mol1 = cat_ordered_tracing[\"grain_0\"][\"mol_1\"][\"ordered_coords\"]\n",
     "\n",
-    "\n",
+    "# plot the crossings for the cat\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "ax.imshow(cat_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.plot(cat_ordered_coords_mol0[:, 1], cat_ordered_coords_mol0[:, 0], color=\"#2578B1\")\n",
-    "ax.plot(cat_ordered_coords_mol1[:, 1], cat_ordered_coords_mol1[:, 0], color=\"#27B125\")\n",
+    "ax.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "cat_image_nodestats = cat_image_dict[\"nodestats\"][\"above\"]\n",
+    "cat_image_nodestats_images_grain0 = cat_image_nodestats[\"images\"][\"grain_0\"]\n",
+    "cat_image_nodestats_images_grain0_nodes = cat_image_nodestats_images_grain0[\"nodes\"]\n",
+    "for node_id, node_image_data in cat_image_nodestats_images_grain0_nodes.items():\n",
+    "    print(f\"node_id: {node_id}\")\n",
+    "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
+    "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
+    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "    print(node_branch_mask.shape)\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-crossings-cats-image\", bbox_inches=\"tight\")\n",
+    "\n",
+    "# Plot separate molecules for the cat\n",
+    "cat_molecule_trace_linewidth = 3\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.plot(\n",
+    "    cat_ordered_coords_mol0[:, 1],\n",
+    "    cat_ordered_coords_mol0[:, 0],\n",
+    "    color=\"#2578B1\",\n",
+    "    linewidth=cat_molecule_trace_linewidth,\n",
+    ")\n",
+    "ax.plot(\n",
+    "    cat_ordered_coords_mol1[:, 1],\n",
+    "    cat_ordered_coords_mol1[:, 0],\n",
+    "    color=\"#27B125\",\n",
+    "    linewidth=cat_molecule_trace_linewidth,\n",
+    ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0db759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# overlapping_molecules_image_file = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules/output/processed/20250721_MC1Rx_8ng_IncMg_ImageNI_2.0_00003.topostats\")\n",
+    "overlapping_molecules_image_file = Path(\n",
+    "    \"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules/output_short_crossings/processed/20250721_MC1Rx_8ng_IncMg_ImageNI_2.0_00003.topostats\"\n",
+    ")\n",
+    "\n",
+    "loadscans = LoadScans(img_paths=[overlapping_molecules_image_file], channel=\"dummy\")\n",
+    "loadscans.get_data()\n",
+    "loadscans_dict = loadscans.img_dict\n",
+    "overlapping_molecules_image_dict = loadscans_dict[list(loadscans_dict.keys())[0]]\n",
+    "overlapping_molecules_p2nm = overlapping_molecules_image_dict[\"pixel_to_nm_scaling\"]\n",
+    "overlapping_molecules_image = overlapping_molecules_image_dict[\"image\"]\n",
+    "plt.imshow(overlapping_molecules_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "overlapping_grain_id = \"grain_2\"\n",
+    "overlapping_grain_bbox = overlapping_molecules_image_dict[\"splining\"][\"above\"][overlapping_grain_id][\"mol_0\"][\"bbox\"]\n",
+    "overlapping_crop = overlapping_molecules_image[\n",
+    "    overlapping_grain_bbox[0] : overlapping_grain_bbox[2], overlapping_grain_bbox[1] : overlapping_grain_bbox[3]\n",
+    "]\n",
+    "overlapping_nodestats = overlapping_molecules_image_dict[\"nodestats\"][\"above\"]\n",
+    "overlapping_nodestats_images_grain = overlapping_nodestats[\"images\"][overlapping_grain_id]\n",
+    "overlapping_nodestats_images_grain_grain_image = overlapping_nodestats_images_grain[\"grain\"][\"grain_image\"]\n",
+    "overlapping_disordered_traces = overlapping_molecules_image_dict[\"disordered_traces\"][\"above\"]\n",
+    "overlapping_disordered_traces_grain = overlapping_disordered_traces[overlapping_grain_id]\n",
+    "overlapping_ordered_coords_grain = overlapping_molecules_image_dict[\"ordered_traces\"][\"above\"][overlapping_grain_id]\n",
+    "overlapping_ordered_coords_grain_mol0 = overlapping_ordered_coords_grain[\"mol_0\"]\n",
+    "overlapping_ordered_coords_grain_mol1 = overlapping_ordered_coords_grain[\"mol_1\"]\n",
+    "overlapping_ordered_coords_grain_mol0_ordered_coords = overlapping_ordered_coords_grain_mol0[\"ordered_coords\"]\n",
+    "overlapping_ordered_coords_grain_mol1_ordered_coords = overlapping_ordered_coords_grain_mol1[\"ordered_coords\"]\n",
+    "\n",
+    "# plot the fwhm\n",
+    "# grab the heights\n",
+    "overlapping_nodestats_stats_grain = overlapping_nodestats[\"stats\"][overlapping_grain_id]\n",
+    "overlapping_nodestats_stats_grain_node1 = overlapping_nodestats_stats_grain[\"node_1\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"0\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"1\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0_heights = overlapping_nodestats_stats_grain_node1_branch_stats_0[\"heights\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1_heights = overlapping_nodestats_stats_grain_node1_branch_stats_1[\"heights\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_0[\"fwhm\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_1[\"fwhm\"]\n",
+    "print(f\"node 1 branch 0 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm}\")\n",
+    "print(f\"node 1 branch 1 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm}\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_0_heights, label=\"node 1 branch 0\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_1_heights, label=\"node 1 branch 1\")\n",
+    "plt.axhline(overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm[\"half_maxs\"][2], color=\"gray\", linestyle=\"--\", label=\"branch 0 half max\")\n",
+    "plt.axhline(overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm[\"half_maxs\"][2], color=\"black\", linestyle=\"--\", label=\"branch 1 half max\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "overlapping_nodestats_stats_grain_node2 = overlapping_nodestats_stats_grain[\"node_2\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"0\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"1\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0_heights = overlapping_nodestats_stats_grain_node2_branch_stats_0[\"heights\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1_heights = overlapping_nodestats_stats_grain_node2_branch_stats_1[\"heights\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_0[\"fwhm\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_1[\"fwhm\"]\n",
+    "print(f\"node 2 branch 0 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm}\")\n",
+    "print(f\"node 2 branch 1 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm}\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_1_heights, label=\"node 2 branch 1\")\n",
+    "plt.axhline(overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm[\"half_maxs\"][2], color=\"gray\", linestyle=\"--\", label=\"branch 0 half max\")\n",
+    "plt.axhline(overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm[\"half_maxs\"][2], color=\"black\", linestyle=\"--\", label=\"branch 1 half max\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# plot branch crossings\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "for node_id, node_image_data in overlapping_nodestats_images_grain[\"nodes\"].items():\n",
+    "    print(f\"node_id: {node_id}\")\n",
+    "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
+    "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
+    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot molecules\n",
+    "plt.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.plot(\n",
+    "    overlapping_ordered_coords_grain_mol0_ordered_coords[:, 1],\n",
+    "    overlapping_ordered_coords_grain_mol0_ordered_coords[:, 0],\n",
+    "    color=\"#2578B1\",\n",
+    "    linewidth=cat_molecule_trace_linewidth,\n",
+    ")\n",
+    "plt.plot(\n",
+    "    overlapping_ordered_coords_grain_mol1_ordered_coords[:, 1],\n",
+    "    overlapping_ordered_coords_grain_mol1_ordered_coords[:, 0],\n",
+    "    color=\"#27B125\",\n",
+    "    linewidth=cat_molecule_trace_linewidth,\n",
+    ")\n",
+    "plt.show()"
    ]
   }
  ],
