[figures] add over-under crossings for overlapping moleucles

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -195,9 +195,12 @@
    "outputs": [],
    "source": [
     "# overlapping_molecules_image_file = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules/output/processed/20250721_MC1Rx_8ng_IncMg_ImageNI_2.0_00003.topostats\")\n",
-    "overlapping_molecules_image_file = Path(\n",
-    "    \"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules/output_short_crossings/processed/20250721_MC1Rx_8ng_IncMg_ImageNI_2.0_00003.topostats\"\n",
-    ")\n",
+    "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules\")\n",
+    "output_dir = base_dir / \"output/processed\"\n",
+    "# filename = \"20240207_mc339_-1_Ni_3.5.0_00004.topostats\"\n",
+    "filename = \"20240424_min2mc339_3ng_434repr_20ng.0_00043.topostats\"\n",
+    "overlapping_molecules_image_file = output_dir / filename\n",
+    "assert overlapping_molecules_image_file.exists()\n",
     "\n",
     "loadscans = LoadScans(img_paths=[overlapping_molecules_image_file], channel=\"dummy\")\n",
     "loadscans.get_data()\n",
@@ -209,11 +212,15 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "overlapping_grain_id = \"grain_2\"\n",
+    "overlapping_grain_id = \"grain_11\"\n",
     "overlapping_grain_bbox = overlapping_molecules_image_dict[\"splining\"][\"above\"][overlapping_grain_id][\"mol_0\"][\"bbox\"]\n",
     "overlapping_crop = overlapping_molecules_image[\n",
     "    overlapping_grain_bbox[0] : overlapping_grain_bbox[2], overlapping_grain_bbox[1] : overlapping_grain_bbox[3]\n",
     "]\n",
+    "\n",
+    "plt.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.show()\n",
+    "\n",
     "overlapping_nodestats = overlapping_molecules_image_dict[\"nodestats\"][\"above\"]\n",
     "overlapping_nodestats_images_grain = overlapping_nodestats[\"images\"][overlapping_grain_id]\n",
     "overlapping_nodestats_images_grain_grain_image = overlapping_nodestats_images_grain[\"grain\"][\"grain_image\"]\n",
@@ -231,32 +238,68 @@
     "overlapping_nodestats_stats_grain_node1 = overlapping_nodestats_stats_grain[\"node_1\"]\n",
     "overlapping_nodestats_stats_grain_node1_branch_stats_0 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"0\"]\n",
     "overlapping_nodestats_stats_grain_node1_branch_stats_1 = overlapping_nodestats_stats_grain_node1[\"branch_stats\"][\"1\"]\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_0_heights = overlapping_nodestats_stats_grain_node1_branch_stats_0[\"heights\"]\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_1_heights = overlapping_nodestats_stats_grain_node1_branch_stats_1[\"heights\"]\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_0[\"fwhm\"]\n",
-    "overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_1[\"fwhm\"]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0_heights = (\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_0[\"heights\"]\n",
+    ")\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1_heights = (\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_1[\"heights\"]\n",
+    ")\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_0[\n",
+    "    \"fwhm\"\n",
+    "]\n",
+    "overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node1_branch_stats_1[\n",
+    "    \"fwhm\"\n",
+    "]\n",
     "print(f\"node 1 branch 0 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm}\")\n",
     "print(f\"node 1 branch 1 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm}\")\n",
     "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_0_heights, label=\"node 1 branch 0\")\n",
     "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_1_heights, label=\"node 1 branch 1\")\n",
-    "plt.axhline(overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm[\"half_maxs\"][2], color=\"gray\", linestyle=\"--\", label=\"branch 0 half max\")\n",
-    "plt.axhline(overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm[\"half_maxs\"][2], color=\"black\", linestyle=\"--\", label=\"branch 1 half max\")\n",
+    "plt.axhline(\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
+    "    color=\"gray\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"branch 0 half max\",\n",
+    ")\n",
+    "plt.axhline(\n",
+    "    overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm[\"half_maxs\"][2],\n",
+    "    color=\"black\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"branch 1 half max\",\n",
+    ")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "overlapping_nodestats_stats_grain_node2 = overlapping_nodestats_stats_grain[\"node_2\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_0 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"0\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_1 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"1\"]\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_0_heights = overlapping_nodestats_stats_grain_node2_branch_stats_0[\"heights\"]\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_1_heights = overlapping_nodestats_stats_grain_node2_branch_stats_1[\"heights\"]\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_0[\"fwhm\"]\n",
-    "overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_1[\"fwhm\"]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0_heights = (\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_0[\"heights\"]\n",
+    ")\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1_heights = (\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_1[\"heights\"]\n",
+    ")\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_0[\n",
+    "    \"fwhm\"\n",
+    "]\n",
+    "overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_1[\n",
+    "    \"fwhm\"\n",
+    "]\n",
     "print(f\"node 2 branch 0 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm}\")\n",
     "print(f\"node 2 branch 1 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm}\")\n",
     "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\")\n",
     "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_1_heights, label=\"node 2 branch 1\")\n",
-    "plt.axhline(overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm[\"half_maxs\"][2], color=\"gray\", linestyle=\"--\", label=\"branch 0 half max\")\n",
-    "plt.axhline(overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm[\"half_maxs\"][2], color=\"black\", linestyle=\"--\", label=\"branch 1 half max\")\n",
+    "plt.axhline(\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
+    "    color=\"gray\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"branch 0 half max\",\n",
+    ")\n",
+    "plt.axhline(\n",
+    "    overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm[\"half_maxs\"][2],\n",
+    "    color=\"black\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"branch 1 half max\",\n",
+    ")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
