[figures] add branch index plots

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -81,7 +81,8 @@
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(image_disordered_traces_grain1_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
     "plt.axis(\"off\")\n",
-    "plt.savefig(figure_dir / f\"i19-fig-ordered-tracing-branch-indexes-grain-1.png\", bbox_inches=\"tight\")"
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-branch-indexes\", bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -115,7 +116,20 @@
     "\n",
     "    # make masked array for node branch mask\n",
     "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
-    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)"
+    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-branch-crossings\", bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
+    "picoz_spline_g1_m0_coords = image_dict[\"splining\"][\"above\"][\"grain_1\"][\"mol_0\"][\"spline_coords\"]\n",
+    "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.plot(\n",
+    "    picoz_spline_g1_m0_coords[:, 1],\n",
+    "    picoz_spline_g1_m0_coords[:, 0],\n",
+    "    color=\"#2578B1\",\n",
+    "    linewidth=3,\n",
+    ")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-mol-0-splined\", bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -149,6 +163,19 @@
     "plt.show()\n",
     "plt.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.show()\n",
+    "\n",
+    "cat_disordered_traces_grain0_branch_indexes = cat_image_dict[\"disordered_traces\"][\"above\"][\"grain_0\"][\"branch_indexes\"]\n",
+    "cat_disordered_traces_grain0_branch_indexes_mask = np.ma.masked_where(\n",
+    "    cat_disordered_traces_grain0_branch_indexes == 0,\n",
+    "    cat_disordered_traces_grain0_branch_indexes,\n",
+    ")\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(cat_disordered_traces_grain0_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
+    "plt.axis(\"off\")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-branch-indexes-cat\", bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
     "cat_ordered_tracing = cat_image_dict[\"ordered_traces\"][\"above\"]\n",
     "\n",
     "cat_ordered_coords_mol0 = cat_ordered_tracing[\"grain_0\"][\"mol_0\"][\"ordered_coords\"]\n",
@@ -184,7 +211,8 @@
     "    color=\"#27B125\",\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
-    "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")"
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -208,6 +236,10 @@
     "overlapping_molecules_image_dict = loadscans_dict[list(loadscans_dict.keys())[0]]\n",
     "overlapping_molecules_p2nm = overlapping_molecules_image_dict[\"pixel_to_nm_scaling\"]\n",
     "overlapping_molecules_image = overlapping_molecules_image_dict[\"image\"]\n",
+    "print(f\"pixel to nm scaling: {overlapping_molecules_p2nm} nm/pixel\")\n",
+    "print(\n",
+    "    f\"image size: {overlapping_molecules_image.shape} px, {overlapping_molecules_image.shape[0]*overlapping_molecules_p2nm:.2f} x {overlapping_molecules_image.shape[1]*overlapping_molecules_p2nm:.2f} nm\"\n",
+    ")\n",
     "plt.imshow(overlapping_molecules_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.show()\n",
     "\n",
@@ -217,7 +249,9 @@
     "overlapping_crop = overlapping_molecules_image[\n",
     "    overlapping_grain_bbox[0] : overlapping_grain_bbox[2], overlapping_grain_bbox[1] : overlapping_grain_bbox[3]\n",
     "]\n",
-    "\n",
+    "print(\n",
+    "    f\"crop size: {overlapping_crop.shape} px, {overlapping_crop.shape[0]*overlapping_molecules_p2nm:.2f} x {overlapping_crop.shape[1]*overlapping_molecules_p2nm:.2f} nm\"\n",
+    ")\n",
     "plt.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.show()\n",
     "\n",
@@ -269,6 +303,18 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
+    "overlapping_molecules_disordered_traces_grain_branch_indexes = overlapping_disordered_traces_grain[\"branch_indexes\"]\n",
+    "overlapping_molecules_disordered_traces_grain_branch_indexes_mask = np.ma.masked_where(\n",
+    "    overlapping_molecules_disordered_traces_grain_branch_indexes == 0,\n",
+    "    overlapping_molecules_disordered_traces_grain_branch_indexes,\n",
+    ")\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(overlapping_molecules_disordered_traces_grain_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
+    "plt.axis(\"off\")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-indexes\", bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
     "overlapping_nodestats_stats_grain_node2 = overlapping_nodestats_stats_grain[\"node_2\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_0 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"0\"]\n",
     "overlapping_nodestats_stats_grain_node2_branch_stats_1 = overlapping_nodestats_stats_grain_node2[\"branch_stats\"][\"1\"]\n",
@@ -284,6 +330,10 @@
     "overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm = overlapping_nodestats_stats_grain_node2_branch_stats_1[\n",
     "    \"fwhm\"\n",
     "]\n",
+    "overlapping_splining = overlapping_molecules_image_dict[\"splining\"][\"above\"]\n",
+    "overlapping_splining_grain = overlapping_splining[overlapping_grain_id]\n",
+    "overlapping_splining_grain_mol0 = overlapping_splining_grain[\"mol_0\"][\"spline_coords\"]\n",
+    "overlapping_splining_grain_mol1 = overlapping_splining_grain[\"mol_1\"][\"spline_coords\"]\n",
     "print(f\"node 2 branch 0 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm}\")\n",
     "print(f\"node 2 branch 1 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm}\")\n",
     "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\")\n",
@@ -313,6 +363,7 @@
     "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
     "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
     "plt.axis(\"off\")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-crossings\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
     "# Plot molecules\n",
@@ -329,6 +380,25 @@
     "    color=\"#27B125\",\n",
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-ordered-coords\", bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
+    "# plot molecules with splines\n",
+    "overlapping_mol_linewidth = 7\n",
+    "plt.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.plot(\n",
+    "    overlapping_splining_grain_mol0[:, 1],\n",
+    "    overlapping_splining_grain_mol0[:, 0],\n",
+    "    color=\"#2578B1\",\n",
+    "    linewidth=overlapping_mol_linewidth,\n",
+    ")\n",
+    "plt.plot(\n",
+    "    overlapping_splining_grain_mol1[:, 1],\n",
+    "    overlapping_splining_grain_mol1[:, 0],\n",
+    "    color=\"#27B125\",\n",
+    "    linewidth=overlapping_mol_linewidth,\n",
+    ")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-splined\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
