[figures] disordered tracing height pruning crop size print

--- a/fig-disordered-tracing.ipynb
+++ b/fig-disordered-tracing.ipynb
@@ -51,6 +51,7 @@
     "loadscans_image_dicts = loadscans.img_dict\n",
     "\n",
     "pruning_height_pruned_image_data = loadscans_image_dicts[pruning_height_pruned_filename.stem]\n",
+    "pruning_height_pruned_p2nm = pruning_height_pruned_image_data[\"pixel_to_nm_scaling\"]\n",
     "pruning_height_original_skeleton = pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
     "    \"skeleton\"\n",
     "]\n",
@@ -66,7 +67,7 @@
     "    pruning_height_pruned_bbox[0] : pruning_height_pruned_bbox[2],\n",
     "    pruning_height_pruned_bbox[1] : pruning_height_pruned_bbox[3],\n",
     "]\n",
-    "\n",
+    "print(f\"crop size: {pruning_height_pruned_crop.shape} px, {pruning_height_pruned_crop.shape[0]*pruning_height_pruned_p2nm:.1f} x {pruning_height_pruned_crop.shape[1]*pruning_height_pruned_p2nm:.1f} nm\")\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
