[figures] grain masking: add multi-steps to the vetting figures and make them black background masked arrays

--- a/fig-masking.ipynb
+++ b/fig-masking.ipynb
@@ -29,41 +29,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/picoz-nicked-sc/fig1/\")\n",
+    "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/fig-grain-finding-masking/\")\n",
     "assert base_dir.exists()\n",
-    "output_filename = \"20250624_12ngpicozgreen_Dot2_nicked_.0_00013.topostats\"\n",
-    "output_topofile = base_dir / \"output\" / \"processed\" / output_filename\n",
-    "assert output_topofile.exists()\n",
+    "dir_no_vet = base_dir / \"output_no_vet\" / \"processed\"\n",
+    "dir_edge_vet = base_dir / \"output_edge_vet\" / \"processed\"\n",
+    "dir_size_vet = base_dir / \"output_size_vet\" / \"processed\"\n",
+    "output_filename = Path(\"20250624_12ngpicozgreen_Dot2_nicked_.0_00013.topostats\")\n",
+    "no_vet_output_topofile = dir_no_vet / output_filename\n",
+    "edge_vet_output_topofile = dir_edge_vet / output_filename\n",
+    "size_vet_output_topofile = dir_size_vet / output_filename\n",
+    "assert no_vet_output_topofile.exists()\n",
+    "assert edge_vet_output_topofile.exists()\n",
+    "assert size_vet_output_topofile.exists()\n",
+    "\n",
     "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-grain-finding\")\n",
     "assert figure_dir.exists()\n",
     "\n",
-    "loadscans = LoadScans(img_paths=[output_topofile], channel=\"dummy\")\n",
-    "loadscans.get_data()\n",
-    "loadscans_img_dict = loadscans.img_dict\n",
+    "loadscans_no_vet = LoadScans(img_paths=[no_vet_output_topofile], channel=\"dummy\")\n",
+    "loadscans_edge_vet = LoadScans(img_paths=[edge_vet_output_topofile], channel=\"dummy\")\n",
+    "loadscans_size_vet = LoadScans(img_paths=[size_vet_output_topofile], channel=\"dummy\")\n",
+    "loadscans_no_vet.get_data()\n",
+    "loadscans_edge_vet.get_data()\n",
+    "loadscans_size_vet.get_data()\n",
     "\n",
-    "image_data = loadscans_img_dict[Path(output_filename).stem]\n",
-    "print(image_data.keys())"
+    "\n",
+    "no_vet_image_data = loadscans_no_vet.img_dict[no_vet_output_topofile.stem]\n",
+    "edge_vet_image_data = loadscans_edge_vet.img_dict[edge_vet_output_topofile.stem]\n",
+    "size_vet_image_data = loadscans_size_vet.img_dict[size_vet_output_topofile.stem]\n",
+    "no_vet_p2nm = no_vet_image_data[\"pixel_to_nm_scaling\"]\n",
+    "edge_vet_p2nm = edge_vet_image_data[\"pixel_to_nm_scaling\"]\n",
+    "size_vet_p2nm = size_vet_image_data[\"pixel_to_nm_scaling\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ec5f74",
+   "id": "29a408ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_tensor = image_data[\"grain_tensors\"][\"above\"]\n",
-    "grain_mask = mask_tensor[:, :, 1]\n",
-    "image = image_data[\"image\"]\n",
+    "image = no_vet_image_data[\"image\"]\n",
+    "no_vet_mask_tensor = no_vet_image_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
+    "edge_vet_mask_tensor = edge_vet_image_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
+    "size_vet_mask_tensor = size_vet_image_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
     "\n",
-    "image_grain_masked_ma = np.ma.masked_array(image, mask=~grain_mask)\n",
-    "\n",
-    "# plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "# black background\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(np.zeros(image.shape), cmap=\"binary_r\")\n",
-    "ax.imshow(image_grain_masked_ma, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "plt.savefig(figure_dir / \"picoz-image-masked-array-grains.png\")"
+    "ax.imshow(np.ma.masked_where(no_vet_mask_tensor == 0, image), cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.savefig(figure_dir / \"fig-grain-masking-no-vet.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(np.zeros(image.shape), cmap=\"binary_r\")\n",
+    "ax.imshow(np.ma.masked_where(edge_vet_mask_tensor == 0, image), cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.savefig(figure_dir / \"fig-grain-masking-edge-vet.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(np.zeros(image.shape), cmap=\"binary_r\")\n",
+    "ax.imshow(np.ma.masked_where(size_vet_mask_tensor == 0, image), cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plt.savefig(figure_dir / \"fig-grain-masking-size-vet.png\")\n",
+    "plt.show()"
    ]
   }
  ],
